[tool.poetry]
name = "whirl_wind"
version = "0.1.1"
description = "A lightweight, customizable WSGI framework designed to handle web requests with ease and flexibility."
authors = ["dafty144 <contact@leojohnston.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"